infra/k8s/query.depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: query-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: query
  template:
    metadata:
      labels:
        app: query
    spec:
      containers:
        - name: query
          image: xafy/blog-query-service
          imagePullPolicy: Never
          resources:
            limits:
              cpu: "0.5"
              memory: "512Mi"
            requests:
              cpu: "0.1"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: query-cluster-ip-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 3002
      targetPort: 3002
